--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="src/assets/logo.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Readme Generator</title>
-    <script src="https://accounts.google.com/gsi/client"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="src/assets/logo.svg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GitHub README Generator</title>
+  <meta name="description" content="Generate professional README.md files for your GitHub repositories in seconds">
+  <link rel="icon" href="/favicon.ico">
+</head>
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
 </html>
