--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="src/assets/logo.svg">
+  <link rel="icon" href="public/readme_logo4.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GitHub README Generator</title>
   <meta name="description" content="Generate professional README.md files for your GitHub repositories in seconds">
